pathfinder/tests/BugTracker/Tests/server-side_compilation_crash.SF-1607210.stable.err
stderr of test 'server-side_compilation_crash.SF-1607210` in directory 'tests/BugTracker` itself:


# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 300 Mserver "--config=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4:/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4/lib:/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4/bin" --set "gdk_dbfarm=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/dbfarm" --set "sql_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/sql_logs" --set "xquery_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/xquery_logs" --set mapi_port=36638 --set xrpc_port=42408 --set monet_prompt= --trace "--dbname=mTests_tests_BugTracker" --dbinit=" module(pathfinder);" ; echo ; echo Over..
# 12:16:07 >  


# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36638 server-side_compilation_crash.SF-1607210_s00.xq
# 12:16:07 >  


# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36638 server-side_compilation_crash.SF-1607210_s01.xq
# 12:16:07 >  

MAPI  = monetdb@localhost:36638
QUERY = <x/>
        /t00/t01/t02/t03/t04/t05/t06/t07/t08/t09
        /t10/t11/t12/t13/t14/t15/t16/t17/t18/t19
        /t20/t21/t22/t23/t24/t25/t26/t27/t28/t29
        /t30/t31/t32/t33/t34/t35/t36/t37/t38/t39
        /t40/t41/t42/t43/t44/t45/t46/t47/t48/t49
        /t50/t51/t52/t53/t54/t55/t56/t57/t58/t59
        /t60/t61/t62/t63/t64/t65/t66/t67/t68/t69
        /t70/t71/t72/t73/t74/t75/t76/t77/t78/t79
        /t80/t81/t82/t83/t84/t85/t86/t87/t88/t89
        /t90/t91/t92/t93/t94/t95/t96/t97/t98/t99
ERROR = !fatal error: aborted too deep recursion
        !# halted in /ufs/manegold/_/scratch0/Monet/Testing/Current/source/pathfinder/compiler/semantics/normalize.brg (reduce), line 711

# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36638 server-side_compilation_crash.SF-1607210_s02.xq
# 12:16:07 >  


# 12:16:07 >  
# 12:16:07 >  Done.
# 12:16:07 >  

